--- a/home page.html
+++ b/home page.html
@@ -15,7 +15,7 @@
     <!-- Navigation Bar -->
     <header>
         <div class="container">
-            <h1><a href="subhashini sand.html">Subhashini Sand Suppliers</a></h1>
+            <h1><a href="index.html">Subhashini Sand Suppliers</a></h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -49,3 +49,4 @@
 
 </body>
 </html>
+
