Fix formatting and structure in about.html

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <!-- Navigation Bar -->
     <header>
         <div class="container">
-            <h1><a href="subhashini sand.html">Subhashini Sand Suppliers</a></h1>
+            <h1><a href="index.html">Subhashini Sand Suppliers</a></h1>
             <nav>
                 <ul>
                     <li><a href="C:\Users\erlaa\Downloads\subhashini sand supplier\index.html">Home</a></li>
@@ -44,3 +44,4 @@
 
 </body>
 </html>
+
