Fix HTML formatting issues in Testimonial.html

--- a/Testimonial.html
+++ b/Testimonial.html
@@ -13,7 +13,7 @@
     <!-- Navigation Bar -->
     <header>
         <div class="container">
-            <h1><a href="subhashini sand.html">Subhashini Sand Suppliers</a></h1>
+            <h1><a href="index.html">Subhashini Sand Suppliers</a></h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -50,3 +50,4 @@
 
 </body>
 </html>
+
